Paulcy added Ménu
MENU SITE L'ACI

--- a/Archer Capital/index.html
+++ b/Archer Capital/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>l'Archer Capital</title>
+    <title>L'Archer Capital Investissement</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -24,21 +24,8 @@
   	<div class="wrap">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-6 d-flex align-items-center">
-						<p class="mb-0 phone pl-md-2">
-							<a href="#" class="mr-2"><span class="fa fa-phone mr-1"></span> (242) 05 554 89 89</a> 
-							<a href="#"><span class="fa fa-paper-plane mr-1"></span> contact@larchercapital.cg</a>
-						</p>
-					</div>
-					<div class="col-md-6 d-flex justify-content-md-end">
-						<div class="social-media">
-			    		<p class="mb-0 d-flex">
-			    			<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"><i class="sr-only">Facebook</i></span></a>
-			    			<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"><i class="sr-only">Twitter</i></span></a>
-			    			<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"><i class="sr-only">Instagram</i></span></a>
-			    			<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-dribbble"><i class="sr-only">Dribbble</i></span></a>
-			    		</p>
-		        </div>
+					<div class="col-md-12 d-flex align-items-center">
+            <marquee id="demo"> </marquee>   <marquee> SAFACAM: 21 433 FCFA (0,000%) </marquee>
 					</div>
 				</div>
 			</div>
@@ -53,12 +40,10 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item active"><a href="index.html" class="nav-link">Archer</a></li>
-	          <li class="nav-item"><a href=" " class="nav-link">Investissement</a></li>
-	          <li class="nav-item"><a href=" " class="nav-link">Entrepreneur</a></li>
-	          <li class="nav-item"><a href=" " class="nav-link">Solidarité</a></li>
-	          <li class="nav-item"><a href=" " class="nav-link">Actualités</a></li>
-	          <li class="nav-item"><a href=" " class="nav-link">Contact</a></li>
+	          <li class="nav-item"><a href="index.html" class="nav-link">Accueil</a></li>
+	          <li class="nav-item"><a href=" " class="nav-link">Marchés</a></li>
+	          <li class="nav-item"><a href=" " class="nav-link">Documentaire</a></li>
+	          <li class="nav-item active"><a href=" " class="nav-link">Premium</a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -518,8 +503,7 @@
         <div class="row mb-5">
           <div class="col-sm-12 col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2 logo"><a href="#">L’ARCHER CAPITAL</a></h2>
-              <p>Notre ambition est de permettre aux entreprise à fort potentiel de dévelopement d'obtenir les moyens de leurs aspirations.</p>
+              <h2 class="ftco-heading-2 logo"><a href="#"><img class="mobile-only-logo" alt="l'archer capital investissement" src="images/logo_blanc.png" width="100%"/></a></h2>
               <ul class="ftco-footer-social list-unstyled mt-2">
                 <li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -529,7 +513,7 @@
           </div>
           <div class="col-sm-12 col-md">
             <div class="ftco-footer-widget mb-4 ml-md-4">
-              <h2 class="ftco-heading-2">LIENS UTILES</h2>
+              <h2 class="ftco-heading-2">Liens utiles</h2>
               <ul class="list-unstyled">
                 <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Qui sommes-nous ?</a></li>
                 <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Capital Investissement</a></li>
@@ -540,7 +524,7 @@
           </div>
           <div class="col-sm-12 col-md">
             <div class="ftco-footer-widget mb-4 ml-md-4">
-              <h2 class="ftco-heading-2">LEGAL</h2>
+              <h2 class="ftco-heading-2">Confidentialisté</h2>
               <ul class="list-unstyled">
                 <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Rejoignez-nous</a></li>
                 <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Actualités</a></li>
@@ -551,21 +535,20 @@
           </div>
           <div class="col-sm-12 col-md">
              <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">ENTREPRISE</h2>
+              <h2 class="ftco-heading-2">Nos Partenaires</h2>
               <ul class="list-unstyled">
                 <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>NOKI DELIVERY</a></li>
                 <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>242 TACOS STREET</a></li>
                 <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>KAMILI Ace’s Fashion H.</a></li>
-                <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>L’ARCHER CAPITAL</a></li>
               </ul>
             </div>
           </div>
           <div class="col-sm-12 col-md">
             <div class="ftco-footer-widget mb-4">
-            	<h2 class="ftco-heading-2">CONTACT</h2>
+            	<h2 class="ftco-heading-2">Contact</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon fa fa-map marker"></span><span class="text">Cité du Clairon, Résidence Martine A, Brazzaville - Congo</span></li>
+	                <li><span class="icon fa fa-map marker"></span><span class="text">Cité du Clairon, Résidence Martine A.</span></li>
 	                <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">(242) 05 554 89 89</span></a></li>
 	                <li><a href="#"><span class="icon fa fa-paper-plane pr-4"></span><span class="text">contact@larchercapital.cg</span></a></li>
 	              </ul>
@@ -580,7 +563,7 @@
 	          <div class="col-md-12">
 		
 	            <p class="mb-0" style="color: rgba(255,255,255,.5);"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-	  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | <a href="" target="_blank">L’ARCHER CAPITAL</a>
+	  Copyright &copy; <script>document.write(new Date().getFullYear());</script> All rights reserved | <a href="" target="_blank">L’ARCHER CAPITAL</a>
 	  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 	          </div>
 	        </div>
@@ -617,6 +600,10 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-23581568-13');
+</script>
+<script>
+var d = new Date();
+document.getElementById("demo").innerHTML = d;
 </script>
     
   </body>
