--- a/L'archerCapital/index.html
+++ b/L'archerCapital/index.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>l'archer capital investissement</title>
+    <title>L'Archer Capital Investissement</title>
     <link rel="icon" href="img/favicon.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -32,7 +32,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href="index.html"> <img src="img/logo_blanc.png" alt="logo"> </a>
+                        <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"> </a>
                         <button class="navbar-toggler" type="button" data-toggle="l'archer capital investissement"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -43,7 +43,7 @@
                             id="navbarSupportedContent">
                             <ul class="navbar-nav">
                             	<li class="nav-item">
-                                    <a class="nav-item active" href="about.html">Entrepreneuriat</a>
+                                    <a class="nav-item active" href="about.html">Accueil</a>
                                 </li>
                                 
                                 <li class="nav-item dropdown">
@@ -58,15 +58,15 @@
                                 </li>
                                 
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="cources.html">Solidarité</a>
+                                    <a class="nav-link" href="cources.html">Marchés</a>
                                 </li>
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="blog.html">Actualités</a>
+                                    <a class="nav-link" href="blog.html">Documentaire</a>
                                 </li>
                             </ul>
                         </div>
                         <div class="menu_btn">
-                            <a href="contact.html" class="btn_2 d-none d-sm-block">Contact</a>
+                            <a href="contact.html" class="btn_2 d-none d-sm-block">Premium</a>
                         </div>
                     </nav>
                 </div>
@@ -82,7 +82,7 @@
                 <div class="col-lg-9">
                     <div class="banner_text text-center">
                         <div class="banner_text_iner">
-                            <h2>l’Archer <span>Capital</span> </h2>
+                            <h2>l’Archer <span>Capital Investissement</span> </h2>
                             <p> </p>
                         </div>
                     </div>
