Paulcy Selected Theme
engineers

--- a/engineers/index.html
+++ b/engineers/index.html
@@ -54,41 +54,14 @@
               <img src="images/logo_couleur.png" alt="Image" class="img-fluid">
             </a>
           </div>
-          <div class="col-lg-3 d-none d-lg-block">
+          <div class="col-lg-9 d-none d-lg-block">
 
             <div class="quick-contact-icons d-flex">
-              <div class="icon align-self-start">
-                <span class="flaticon-placeholder text-primary"></span>
-              </div>
               <div class="text">
-                <span class="h4 d-block">Cité du clairon,</span>
-                <span class="caption-text"> Résidence Martine A</span>
+                <span class="h4 d-block"><marquee id="demo"> </marquee>  <marquee> SAFACAM: 21 433 FCFA (0,000%) | ECMR.05-18/23 : 99,50 % (0,000 %) | BGFI.01-13/20 : 100.00 % (0,000 %)</marquee></span>
               </div>
             </div>
 
-          </div>
-          <div class="col-lg-3 d-none d-lg-block">
-            <div class="quick-contact-icons d-flex">
-              <div class="icon align-self-start">
-                <span class="flaticon-call text-primary"></span>
-              </div>
-              <div class="text">
-                <span class="h4 d-block"> (242) 05 554 89 89</span>
-                <span class="caption-text">Brazzaville</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 d-none d-lg-block">
-            <div class="quick-contact-icons d-flex">
-              <div class="icon align-self-start">
-                <span class="flaticon-email text-primary"></span>
-              </div>
-              <div class="text">
-                <span class="h4 d-block"> contact@larchercapital.cg</span>
-                <span class="caption-text">République du Congo</span>
-              </div>
-            </div>
           </div>
 
           <div class="col-6 d-block d-lg-none text-right">
@@ -133,7 +106,7 @@
     </div>
     
     <div class="hero-slide owl-carousel site-blocks-cover">
-      <div class="intro-section" style="background-image: url('images/pexels-markus-winkler-4584836.jpg');">
+      <div class="intro-section" style="background-image: url('images/pexels-skitterphoto-12619.jpg');">
         <div class="container">
           <div class="row align-items-center">
             <div class="col-lg-12 mx-auto text-center" data-aos="fade-up">
@@ -386,8 +359,8 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 mb-5 text-center">
-            <h3 class="section-subtitle">Testimonial</h3>
-            <h2 class="section-title text-black mb-4">What People Says</h2>
+            <h3 class="section-subtitle">L'Archer Capital Investissement</h3>
+            <h2 class="section-title text-black mb-4">Notre Equipe</h2>
           </div>
         </div>
 
@@ -484,22 +457,19 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-3">
-            <p class="mb-4"><img src="images/logo_blanc.png" alt="Image" class="img-fluid"></p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae nemo minima qui dolor, iusto iure.</p>  
-            <p><a href="#">Learn More</a></p>
+            <p class="mb-4"><img src="images/logo_couleur.png" alt="Image" class="img-fluid"></p>
+            <p></p>  
+            <p><a href="#">Plan du site</a> | <a href="#">Nos Partenaires</a> | <a href="#">Mentions légales</a> | <a href="#">Confidentialisté</a></p>
           </div>
           <div class="col-lg-3">
             <h3 class="footer-heading"><span>Liens utiles</span></h3>
             <ul class="list-unstyled">
-                <li><a href="#">CEMAC</a></li>
-                <li><a href="#">BVMAC</a></li>
-                <li><a href="#">COSUMAF</a></li>
-                <li><a href="#">BEAC</a></li>
-                <li><a href="#">COBAC</a></li>
+                <li><a href="#">CEMAC</a> | <a href="#">COBAC</a> | <a href="#">COSUMAF</a></li>
+                <li><a href="#">BVMAC</a> | <a href="#">BEAC</a> | </li>
             </ul>
           </div>
           <div class="col-lg-3">
-              <h3 class="footer-heading"><span>Our Services</span></h3>
+              <h3 class="footer-heading"><span>Nos Services</span></h3>
               <ul class="list-unstyled">
                   <li><a href="#">Industrial</a></li>
                   <li><a href="#">Construction</a></li>
@@ -509,10 +479,6 @@
           <div class="col-lg-3">
               <h3 class="footer-heading"><span>Contact</span></h3>
               <ul class="list-unstyled">
-                  <li><a href="#">Plan du site</a></li>
-                  <li><a href="#">Confidentialisté</a></li>
-                  <li><a href="#">Nos Partenaires</a></li>
-                  <li><a href="#">Mentions légales</a></li>
                   <li><a href="#">Support Community</a></li>
               </ul>
           </div>
@@ -523,7 +489,7 @@
             <div class="copyright">
                 <p>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | <i class="icon-heart text-danger" aria-hidden="true"></i> <a href="http://larchercapital.cg/" target="_blank" >L’ARCHER CAPITAL</a>
+                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | <a href="http://larchercapital.cg/" target="_blank" >L’ARCHER CAPITAL</a>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </p>
             </div>
@@ -568,6 +534,10 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-23581568-13');
+</script>
+<script>
+var d = new Date();
+document.getElementById("demo").innerHTML = d;
 </script>
 
 </body>
