Paulcy added App Store
and Google app

--- a/engineers/index.html
+++ b/engineers/index.html
@@ -371,7 +371,7 @@
               <blockquote>
                 <p>&ldquo;Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident deleniti iusto molestias, dolore vel fugiat ab placeat ea?&rdquo;</p>
               </blockquote>
-              <p class="client-name">Matt Keygen</p>
+              <p class="client-name">Darole MVEMBE</p>
             </div>
           </div>
           <div class="col-md-6 mb-4 mb-md-0">
@@ -469,11 +469,14 @@
             </ul>
           </div>
           <div class="col-lg-3">
-              <h3 class="footer-heading"><span>Nos Services</span></h3>
+              <h3 class="footer-heading"><span>Application mobile</span></h3>
               <ul class="list-unstyled">
-                  <li><a href="#">Industrial</a></li>
-                  <li><a href="#">Construction</a></li>
-                  <li><a href="#">Remodeling</a></li>
+                <li>
+                  <a href="#" class="img-link"><img src="images/AS.png" alt="Image" class="img-fluid" width="53%"></a>
+                </li>
+                <li>
+                  <a href="#" class="img-link"><img src="images/apps.svg" alt="Image" class="img-fluid"></a>
+                </li>
               </ul>
           </div>
           <div class="col-lg-3">
@@ -489,7 +492,7 @@
             <div class="copyright">
                 <p>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | <a href="http://larchercapital.cg/" target="_blank" >L’ARCHER CAPITAL</a>
+                    Copyright &copy; <script>document.write(new Date().getFullYear());</script> All rights reserved | <a href="http://larchercapital.cg/" target="_blank" >L’ARCHER CAPITAL</a>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </p>
             </div>
