Paulcy added phone

--- a/Home/index.html
+++ b/Home/index.html
@@ -245,7 +245,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-5 align-self-end">
-            <img src="images/about_1.jpg" alt="Image" class="img-fluid">
+            <img src="images/pexels-charles-parker-5845728.jpg" alt="Image" class="img-fluid">
           </div>
           <div class="col-lg-7 align-self-center mb-5">
 
@@ -264,7 +264,7 @@
         
         <div class="mb-5">
           <h3 class="section-subtitle">L'Archer Capital Investissement</h3>
-          <h2 class="section-title mb-4"> <strong> Nos valeurs</strong></h2>
+          <h2 class="section-title mb-4"> <strong> Nos valeurs sont l’essence même de notre identité.</strong></h2>
         </div>
 
         <div class="projects-carousel-wrap">
@@ -372,8 +372,8 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 mb-5 text-left">
-            <h3 class="section-subtitle">Actualités</h3>
-            <h2 class="section-title text-black mb-4">News &amp; Updates</h2>
+            <h3 class="section-subtitle">L'Archer Capital Investissement</h3>
+            <h2 class="section-title mb-4"> <strong> Conseil – Business Solution</strong></h2>
           </div>
         </div>
         <div class="row">
