--- a/Home/index.html
+++ b/Home/index.html
@@ -106,7 +106,7 @@
     </div>
     
     <div class="hero-slide owl-carousel site-blocks-cover">
-      <div class="intro-section" style="background-image: url('images/pexels-skitterphoto-12619.jpg');">
+      <div class="intro-section" style="background-image: url('images/corniche.jpg');">
         <div class="container">
           <div class="row align-items-center">
             <div class="col-lg-12 mx-auto text-center" data-aos="fade-up">
@@ -116,7 +116,7 @@
         </div>
       </div>
 
-      <div class="intro-section" style="background-image: url('images/pexels-pixabay-53621.jpg');">
+      <div class="intro-section" style="background-image: url('images/BrazzaArc.jpg');">
         <div class="container">
           <div class="row align-items-center">
             <div class="col-lg-12 mx-auto text-center" data-aos="fade-up">
@@ -263,8 +263,8 @@
       <div class="container">
         
         <div class="mb-5">
-          <h3 class="section-subtitle">L'Archer Capital Investissement</h3>
-          <h2 class="section-title mb-4"> <strong> Nos valeurs sont l’essence même de notre identité.</strong></h2>
+          <h2 class="section-title mb-4 text-black">Nos <strong>Valeurs</strong></h2>
+          <h3 class="section-subtitle">Nos valeurs sont l’essence même de notre identité</h3>
         </div>
 
         <div class="projects-carousel-wrap">
@@ -372,8 +372,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 mb-5 text-left">
-            <h3 class="section-subtitle">L'Archer Capital Investissement</h3>
-            <h2 class="section-title mb-4"> <strong> Conseil – Business Solution</strong></h2>
+          	<h3 class="section-subtitle">Les Sociétés accompagnées</h3>
           </div>
         </div>
         <div class="row">
@@ -418,14 +417,13 @@
     <div class="py-5 bg-primary block-4">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-lg-6">
-            <h3 class="text-white">Subscribe To Newsletter</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, reprehenderit!</p>
+          <div class="col-lg-9">
+            <h3 class="text-white">Formation Professionnelle</h3>
+            <p>Si vous souhaitez en savoir plus sur nos offres, veuillez nous rejoindre. Pour ce faire, veuillez cliquer sur rejoindre et remplir le formulaire. Merci.</p>
           </div>
-          <div class="col-lg-6">
-            <form action="#" class="form-subscribe d-flex">
-              <input type="text" class="form-control form-control-lg">
-              <input type="submit" class="btn btn-secondary px-4" value="Subcribe">
+          <div class="col-lg-3">
+            <form action="https://docs.google.com/document/d/1v2zDaS_FIYXnRrqlnNu64WWNYmfB4sbl/edit" class="form-subscribe d-flex">
+              <input type="submit" class="btn btn-secondary px-4" value="rejoindre">
             </form>
           </div>
         </div>
@@ -436,14 +434,13 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-4">
-            <p class="mb-4"><img src="images/logo_couleur.png" alt="Image" class="img-fluid"></p>
+            <p class="mb-4"><img src="images/logo_couleur.png" alt="Image" class="img-fluid">
+
+            </p>
           </div>
           <div class="col-lg-4">
             <h3 class="footer-heading"><span>Liens utiles</span></h3>
             <ul class="list-unstyled">
-                <li>
-                	<a href="#">Nos Partenaires</a> | <a href="#">Mentions légales</a> | <a href="#">Confidentialisté</a>
-                </li>
                 <li>
                 	<a href="http://www.cemac.int/">CEMAC</a> | <a href="http://www.sgcobac.org/">COBAC</a> | <a href="https://cosumaf.org/">COSUMAF</a> | <a href="https://www.bvm-ac.org/">BVMAC</a> | <a href="https://www.beac.int/">BEAC</a>
                 </li>
@@ -453,15 +450,18 @@
           <div class="col-lg-4">
               <h3 class="footer-heading"><span>Contact</span></h3>
               <ul class="list-unstyled">
-                  <li>
-                  	<img src="images/whatsapp.png" alt="Image" class="img-fluid"> (242) 05 554 89 89 
-                  </li> 
-                  <li>
+              	<li>
+                  	<img src="images/placeholder.png" alt="Image" class="img-fluid"> Immeuble Coray Résidence, Rue de la Musique Tambourine, 2e Étage F2. Centre ville, Brazzaville, République du Congo. 
+                </li>
+                <li>
                   	<img src="images/sync-mail.png" alt="Image" class="img-fluid"> <a href="mailto:contact@larchercapital.cg">contact@larchercapital.cg</a> 
-                  </li>
-                  <li>
+                </li>
+                <li>
+                  	<img src="images/whatsapp.png" alt="Image" class="img-fluid"> (242) 05 554 89 89 
+                </li> 
+                <li>
                   	<a href="#"><img src="images/facebook.png" alt="Image" class="img-fluid"></a> <a href="#"><img src="images/twitter.png" alt="Image" class="img-fluid"></a> <a href="#"><img src="images/linkedin.png" alt="Image" class="img-fluid"></a> <a href="#"><img src="images/medium.png" alt="Image" class="img-fluid"></a>
-                  </li>
+                </li>
               </ul>
           </div>
         </div>
@@ -469,9 +469,10 @@
         <div class="row">
           <div class="col-12">
             <div class="copyright">
+            	<p><a href="#">Nos Partenaires</a> | <a href="#">Mentions légales</a> | <a href="https://docs.google.com/document/d/1Hvw8Is1g_pf0SRao931CfoJpNJR0vN8x8MDR_Tqix8Y/edit?usp=sharing">Confidentialisté</a></p>
                 <p>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    Copyright &copy; <script>document.write(new Date().getFullYear());</script> All rights reserved | <a href="http://larchercapital.cg/" target="_blank" >L’ARCHER CAPITAL</a>
+                    Copyright &copy; <script>document.write(new Date().getFullYear());</script> All rights reserved | <a href="http://larchercapital.cg/" target="_blank" >L'Archer Capital Investissement</a>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </p>
             </div>
