Paulcy changed Color

--- a/Home/index.html
+++ b/Home/index.html
@@ -414,11 +414,11 @@
     </div>
 
     
-    <div class="py-5 bg-primary block-4">
+    <div class="py-5 bg-black block-4">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-9">
-            <h3 class="text-white">Formation Professionnelle</h3>
+            <h2 class="section-title mb-4"><strong>Formation Professionnelle</strong></h2>
             <p>Si vous souhaitez en savoir plus sur nos offres, veuillez nous rejoindre. Pour ce faire, veuillez cliquer sur rejoindre et remplir le formulaire. Merci.</p>
           </div>
           <div class="col-lg-3">
