Paulcy added Github btn

--- a/Home/index.html
+++ b/Home/index.html
@@ -58,7 +58,7 @@
 
             <div class="quick-contact-icons d-flex">
               <div class="text">
-                <span class="h4 d-block"><marquee id="demo"> </marquee>  <marquee> SAFACAM: 21 433 FCFA (0,000%) | ECMR.05-18/23 : 99,50 % (0,000 %) | BGFI.01-13/20 : 100.00 % (0,000 %)</marquee></span>
+                <span class="section-title"><marquee id="demo"> </marquee>  <marquee> SAFACAM: 21 433 FCFA (0,000%) | ECMR.05-18/23 : 99,50 % (0,000 %) | BGFI.01-13/20 : 100.00 % (0,000 %)</marquee></span>
               </div>
             </div>
 
@@ -84,7 +84,7 @@
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none pl-0 d-lg-block">
                 
                 <li>
-                  <a href="" class="nav-link text-left">L'Archer Capital Investissement</a>
+                  <a href="" class="nav-link text-left">L'Archer</a>
                 </li>
                 <li>
                   <a href="" class="nav-link text-left">Marchés</a>
@@ -92,7 +92,7 @@
                 <li>
                     <a href="" class="nav-link text-left">Base Documentaire</a>
                 </li>
-                <li><a href="" class="nav-link text-left">Premium</a></li>
+                <li class="btn-primary"><a href="" class="nav-link text-left">Premium</a></li>
               </ul>                                                                                                                                                                                                                                                                                          </ul>
             </nav>
 
@@ -372,7 +372,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 mb-5 text-left">
-          	<h3 class="section-subtitle">Les Sociétés accompagnées</h3>
+          	<h3 class="section-subtitle">Il nous ont fait confiance</h3>
           </div>
         </div>
         <div class="row">
@@ -457,10 +457,10 @@
                   	<img src="images/sync-mail.png" alt="Image" class="img-fluid"> <a href="mailto:contact@larchercapital.cg">contact@larchercapital.cg</a> 
                 </li>
                 <li>
-                  	<img src="images/whatsapp.png" alt="Image" class="img-fluid"> (242) 05 554 89 89 
+                  	<img src="images/phone-call.png" alt="Image" class="img-fluid"> (242) 05 554 89 89 
                 </li> 
                 <li>
-                  	<a href="#"><img src="images/facebook.png" alt="Image" class="img-fluid"></a> <a href="#"><img src="images/twitter.png" alt="Image" class="img-fluid"></a> <a href="#"><img src="images/linkedin.png" alt="Image" class="img-fluid"></a> <a href="#"><img src="images/medium.png" alt="Image" class="img-fluid"></a>
+                  	<a href="#"><img src="images/facebook.png" alt="Image" class="img-fluid"></a> <a href="#"><img src="images/twitter.png" alt="Image" class="img-fluid"></a> <a href="#"><img src="images/linkedin.png" alt="Image" class="img-fluid"></a> <a href="#"><img src="images/medium.png" alt="Image" class="img-fluid"></a> <a href="#"><img src="images/github.png" alt="Image" class="img-fluid"></a>
                 </li>
               </ul>
           </div>
