Paulcy added sponsor

--- a/Home/index.html
+++ b/Home/index.html
@@ -92,7 +92,7 @@
                 <li>
                     <a href="" class="nav-link text-left">Base Documentaire</a>
                 </li>
-                <li class="btn-primary"><a href="" class="nav-link text-left">Premium</a></li>
+                <li class="btn-primary text-white"><a href="" class="nav-link text-left">Premium</a></li>
               </ul>                                                                                                                                                                                                                                                                                          </ul>
             </nav>
 
@@ -207,24 +207,21 @@
 
               <div class="row my-5">
                 <div class="col-lg-12 d-flex align-items-center mb-4">
-                  <span class="line-height-0 flaticon-oil-platform display-4 mr-4 text-primary"></span>
+                  <img src="images/entrepreneur.png" alt="Image" class="img-fluid">
                   <div>
                     <h4 class="m-0 h5 text-white">Accompagner les entrepreneurs</h4>
-                    <p class="text-white"></p>
                   </div>
                 </div>
                 <div class="col-lg-12 d-flex align-items-center mb-4">
-                  <span class="line-height-0 flaticon-compass display-4 mr-4 text-primary"></span>
+                  <img src="images/capital.png" alt="Image" class="img-fluid">
                   <div>
                     <h4 class="m-0 h5 text-white">Participer au capital social des entreprises</h4>
-                    <p class="text-white"></p>
                   </div>
                 </div>
                 <div class="col-lg-12 d-flex align-items-center">
-                  <span class="line-height-0 flaticon-planning display-4 mr-4 text-primary"></span>
+                  <img src="images/laptop.png" alt="Image" class="img-fluid">
                   <div>
                     <h4 class="m-0 h5 text-white">Etre un acteur important pour le tissu économique du Congo</h4>
-                    <p class="text-white"></p>
                   </div>
                 </div>
 
@@ -250,7 +247,7 @@
           <div class="col-lg-7 align-self-center mb-5">
 
             <div class="bg-black  quote-form-wrap wrap text-white">
-              <blockquote class="twitter-tweet"><p lang="fr" dir="ltr">[<a href="https://twitter.com/hashtag/Live?src=hash&amp;ref_src=twsrc%5Etfw">#Live</a> ⚡️📺 <a href="https://twitter.com/hashtag/Rugby?src=hash&amp;ref_src=twsrc%5Etfw">#Rugby</a>] Suivez en direct le tirage au sort <a href="https://twitter.com/hashtag/RWC2023?src=hash&amp;ref_src=twsrc%5Etfw">#RWC2023</a> avec en exclusivité notre ambassadeur rugby <a href="https://twitter.com/TitiDusautoir?ref_src=twsrc%5Etfw">@TitiDusautoir</a> et <a href="https://twitter.com/JSoula?ref_src=twsrc%5Etfw">@JSoula</a><a href="https://twitter.com/hashtag/BecauseWeLoveRugby?src=hash&amp;ref_src=twsrc%5Etfw">#BecauseWeLoveRugby</a>🏉 <a href="https://twitter.com/hashtag/TheFutureIsYou?src=hash&amp;ref_src=twsrc%5Etfw">#TheFutureIsYou</a> <a href="https://t.co/ipwWxM6qwH">https://t.co/ipwWxM6qwH</a></p>&mdash; Societe Generale Group (@SocieteGenerale) <a href="https://twitter.com/SocieteGenerale/status/1338442638228402183?ref_src=twsrc%5Etfw">December 14, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+              <iframe width="100%" height="315" src="https://www.youtube.com/embed/shwwPkYSZM0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
           </div>
         </div>
@@ -381,21 +378,13 @@
               <a href="#" class="img-link">
                 <img src="images/noki_delivery_logo.jpg" alt="Image" class="img-fluid">
               </a>
-              <div class="blog-entry-contents">
-                <h3><a href="#">NOKI DELIVERY</a></h3>
-                <div class="meta">Posted by <a href="#">Admin</a> In <a href="#">News</a></div>
-              </div>
             </div>
           </div>
           <div class="col-md-6 mb-4 mb-lg-0 col-lg-4">
             <div class="blog-entry">
-              <a href="#" class="img-link">
+              <a href="https://242tacos-street.com/" class="img-link">
                 <img src="images/logo_242_tacos_street.png" alt="Image" class="img-fluid">
               </a>
-              <div class="blog-entry-contents">
-                <h3><a href="https://242tacos-street.com/">242 TACOS STREET</a></h3>
-                <div class="meta">Posted by <a href="#">Admin</a> In <a href="#">News</a></div>
-              </div>
             </div>
           </div>
           <div class="col-md-6 mb-4 mb-lg-0 col-lg-4">
@@ -403,13 +392,34 @@
               <a href="#" class="img-link">
                 <img src="images/kamili.jpeg" alt="Image" class="img-fluid">
               </a>
-              <div class="blog-entry-contents">
-                <h3><a href="#">KAMILI Ace’s Fashion House</a></h3>
-                <div class="meta">Posted by <a href="#">Admin</a> In <a href="#">News</a></div>
-              </div>
             </div>
           </div>
         </div>
+
+        <div class="row">
+          <div class="col-md-6 mb-4 mb-lg-0 col-lg-4">
+            <div class="blog-entry">
+              <a href="#" class="img-link">
+                <img src="images/hmg.jpg" alt="Image" class="img-fluid">
+              </a>
+            </div>
+          </div>
+          <div class="col-md-6 mb-4 mb-lg-0 col-lg-4">
+            <div class="blog-entry">
+              <a href="https://www.grandefermedufouta.sn/" class="img-link">
+                <img src="images/GFDF - LOGO - Coul.png" alt="Image" class="img-fluid">
+              </a>
+            </div>
+          </div>
+          <div class="col-md-6 mb-4 mb-lg-0 col-lg-4">
+            <div class="blog-entry">
+              <a href="#" class="img-link">
+                <img src="images/hmg.jpg" alt="Image" class="img-fluid">
+              </a>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
 
@@ -451,10 +461,10 @@
               <h3 class="footer-heading"><span>Contact</span></h3>
               <ul class="list-unstyled">
               	<li>
-                  	<img src="images/placeholder.png" alt="Image" class="img-fluid"> Immeuble Coray Résidence, Rue de la Musique Tambourine, 2e Étage F2. Centre ville, Brazzaville, République du Congo. 
+                  	<img src="images/location.png" alt="Image" class="img-fluid"> Immeuble Coray Résidence, Rue de la Musique Tambourine, 2e Étage F2. Centre ville, Brazzaville, République du Congo. 
                 </li>
                 <li>
-                  	<img src="images/sync-mail.png" alt="Image" class="img-fluid"> <a href="mailto:contact@larchercapital.cg">contact@larchercapital.cg</a> 
+                  	<img src="images/sync-mail.png" alt="Image" class="img-fluid"> <a href="mailto:contact@larchercapital.com">contact@larchercapital.com</a> 
                 </li>
                 <li>
                   	<img src="images/phone-call.png" alt="Image" class="img-fluid"> (242) 05 554 89 89 
