Paulcy added index
1% Done

--- a/Home/index.html
+++ b/Home/index.html
@@ -84,7 +84,7 @@
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none pl-0 d-lg-block">
                 
                 <li>
-                  <a href="" class="nav-link text-left">L'Archer</a>
+                  <a href="" class="nav-link text-left">L'Archer Capital</a>
                 </li>
                 <li>
                   <a href="" class="nav-link text-left">Marchés</a>
@@ -92,7 +92,10 @@
                 <li>
                     <a href="" class="nav-link text-left">Base Documentaire</a>
                 </li>
-                <li class="btn-primary text-white"><a href="" class="nav-link text-left">Premium</a></li>
+                <li>
+                    <a href="" class="nav-link text-left">Contactez-Nous</a>
+                </li>
+                <li class="btn-primary"><a href="" class="nav-link text-left">Premium</a></li>
               </ul>                                                                                                                                                                                                                                                                                          </ul>
             </nav>
 
@@ -369,7 +372,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 mb-5 text-left">
-          	<h3 class="section-subtitle">Il nous ont fait confiance</h3>
+          	<h3 class="section-subtitle">Ils nous font confiance</h3>
           </div>
         </div>
         <div class="row">
@@ -444,15 +447,28 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-4">
-            <p class="mb-4"><img src="images/logo_couleur.png" alt="Image" class="img-fluid">
-
+            <p class="mb-4"><img src="images/logo_couleur.png" alt="Image" class="img-fluid"></p>
+            <p>
+              	<a href="#"><img src="images/facebook.png" alt="Image" class="img-fluid"></a> <a href="#"><img src="images/twitter.png" alt="Image" class="img-fluid"></a> <a href="#"><img src="images/linkedin.png" alt="Image" class="img-fluid"></a> <a href="#"><img src="images/instagram.png" alt="Image" class="img-fluid"></a> <a href="#"><img src="images/slack.png" alt="Image" class="img-fluid"></a> <a href="#"><img src="images/medium.png" alt="Image" class="img-fluid"></a> <a href="#"><img src="images/github.png" alt="Image" class="img-fluid"></a>
             </p>
           </div>
           <div class="col-lg-4">
             <h3 class="footer-heading"><span>Liens utiles</span></h3>
             <ul class="list-unstyled">
+            	<li>
+                	<a href="https://cosumaf.org/">COSUMAF</a>
+                </li>
                 <li>
-                	<a href="http://www.cemac.int/">CEMAC</a> | <a href="http://www.sgcobac.org/">COBAC</a> | <a href="https://cosumaf.org/">COSUMAF</a> | <a href="https://www.bvm-ac.org/">BVMAC</a> | <a href="https://www.beac.int/">BEAC</a>
+                	<a href="http://www.cemac.int/">CEMAC</a>
+                </li>
+                <li>
+                	<a href="http://www.sgcobac.org/">COBAC</a>
+                </li>
+                <li>
+                	<a href="https://www.bvm-ac.org/">BVMAC</a>
+                </li>
+                <li>
+                	<a href="https://www.beac.int/">BEAC</a>
                 </li>
             </ul>
           </div>
@@ -469,9 +485,7 @@
                 <li>
                   	<img src="images/phone-call.png" alt="Image" class="img-fluid"> (242) 05 554 89 89 
                 </li> 
-                <li>
-                  	<a href="#"><img src="images/facebook.png" alt="Image" class="img-fluid"></a> <a href="#"><img src="images/twitter.png" alt="Image" class="img-fluid"></a> <a href="#"><img src="images/linkedin.png" alt="Image" class="img-fluid"></a> <a href="#"><img src="images/medium.png" alt="Image" class="img-fluid"></a> <a href="#"><img src="images/github.png" alt="Image" class="img-fluid"></a>
-                </li>
+                
               </ul>
           </div>
         </div>
